tests/diagnostics/types/declarations/duplicate_name/expect.txt
# exit: 1
input/main.lang0:5:1: error: duplicate type 'User'
  User :: struct {
  ^
